fixed buffer, added lexer

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,8 @@ include ../stddefs.mk
 C_INC 	= ../include
 LD		+= -r
 
-OBJECTS = file.o
+OBJECTS = file.o \
+	token.o
 
 all: src.o
 
@@ -14,3 +15,5 @@ clean:
 	rm -f *.o
 
 file.o: file.c
+
+token.o: token.c
