--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ C_INC 	= ../include
 LD		+= -r
 
 OBJECTS = file.o \
+	preprocess.o \
 	token.o
 
 all: src.o
@@ -15,5 +16,7 @@ clean:
 	rm -f *.o
 
 file.o: file.c
+
+preprocess.o: preprocess.c
 
 token.o: token.c
